--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,11 +22,11 @@
         </activity>
         <activity
             android:name=".HomeActivity"
-            android:label="@string/title_activity_home"
+            android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".MyBookingActivity"
-            android:label="@string/title_activity_my_booking"
+            android:label="@string/app_name"
             android:parentActivityName=".HomeActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
@@ -35,7 +35,7 @@
         </activity>
         <activity
             android:name=".ProfileActivity"
-            android:label="@string/title_activity_profile"
+            android:label="@string/app_name"
             android:parentActivityName=".HomeActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
@@ -44,7 +44,7 @@
         </activity>
         <activity
             android:name=".AvailableSessionsActivity"
-            android:label="@string/title_activity_available_sessions"
+            android:label="@string/app_name"
             android:parentActivityName=".HomeActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
@@ -53,7 +53,7 @@
         </activity>
         <activity
             android:name=".BookingHistoryActivity"
-            android:label="@string/title_activity_booking_history"
+            android:label="@string/app_name"
             android:parentActivityName=".HomeActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
