--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".MyBookingActivity"
-            android:label="@string/app_name"
+            android:label="@string/my_booking"
             android:parentActivityName=".HomeActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
@@ -35,7 +35,7 @@
         </activity>
         <activity
             android:name=".ProfileActivity"
-            android:label="@string/app_name"
+            android:label="@string/my_profile"
             android:parentActivityName=".HomeActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
@@ -44,7 +44,7 @@
         </activity>
         <activity
             android:name=".AvailableSessionsActivity"
-            android:label="@string/app_name"
+            android:label="@string/available_sessions"
             android:parentActivityName=".HomeActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
@@ -53,7 +53,7 @@
         </activity>
         <activity
             android:name=".BookingHistoryActivity"
-            android:label="@string/app_name"
+            android:label="@string/booking_history"
             android:parentActivityName=".HomeActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
