--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,5 +41,6 @@ dependencies {
     compile 'com.google.firebase:firebase-database:9.4.0'
     compile 'com.firebase:firebase-client-android:2.3.1'
     compile 'com.firebaseui:firebase-ui-database:0.4.0'
+    compile 'com.viewpagerindicator:library:2.4.1@aar'
 }
 apply plugin: 'com.google.gms.google-services'
