--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@
 
 buildscript {
     repositories {
+        maven { url "http://dl.bintray.com/populov/maven" }
+        mavenCentral()
         jcenter()
     }
     dependencies {
@@ -15,6 +17,8 @@ buildscript {
 
 allprojects {
     repositories {
+        maven { url "http://dl.bintray.com/populov/maven" }
+        mavenCentral()
         jcenter()
     }
 }
